# skills-registry

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  install.ps1  install.sh  math_bug.py  pyproject.toml  ruff.toml
.Jules/: tuner.md
.agents/skills/building-glamorous-tuis/: SKILL.md
.agents/skills/pr_alignment_loop/: SKILL.md
.github/workflows/: ci.yml  junie-review.yml  junie-tag.yml  release-macapp.yml  release.yml  website-deploy.yml
cli/: go.mod  go.sum  staticcheck.conf
cli/cmd/skill-registry/: add.go  bootstrap.go  bootstrap_test.go  get.go  hub.go  hub_flow_deps.go  hub_test.go  install_script_test.go  json_test.go  list.go  main.go  main_test.go  publish.go  remove.go  sync.go  update.go  update_test.go  wizard.go
cli/cmd/skills-registry/: add.go  add_test.go  bootstrap.go  get.go  get_test.go  hub.go  hub_flow_deps.go  hub_test.go  install_local.go  install_local_test.go  install_script_test.go  json_test.go  list.go  main.go  main_test.go  publish.go  purge_test.go  remove.go  remove_test.go  search.go  search_test.go  sync.go  update.go  update_test.go  wizard.go
cli/internal/agents/: agents.go
cli/internal/bootstrap/: install.go  install_test.go  mcp_install.go  mcp_install_test.go  skillmd.go  skillmd_test.go
cli/internal/cache/: cache.go  cache_test.go
cli/internal/config/: config.go
cli/internal/jsonout/: jsonout.go  jsonout_test.go
cli/internal/registry/: mirror.go  registry.go  registry_test.go
cli/internal/scan/: scan.go  scan_test.go
cli/internal/tui/: cardgrid.go  cardgrid_test.go  confirm.go  flow_add.go  flow_helpers.go  flow_models_test.go  flow_publish.go  flow_purge.go  flow_purge_test.go  flow_sync.go  hub.go  hub_program.go  hub_test.go  input.go  install_picker.go  install_picker_test.go  listmodel.go  listmodel_test.go  multiselect.go  settings.go  settings_test.go  styles.go  wizard.go  wizard_steps.go  wizard_steps_test.go  wizard_test.go
docs/: registry.md
docs/img/: README.md
droid-wiki/: by-the-numbers.md  deployment.md  fun-facts.md  lore.md  security.md
droid-wiki/api/: cli-commands.md  index.md  mcp-tools.md
droid-wiki/apps/: index.md  installer.md  mcp-server.md
droid-wiki/apps/cli/: index.md  subcommands.md  wizard-and-hub.md
droid-wiki/background/: design-decisions.md
droid-wiki/how-to-contribute/: debugging.md  development-workflow.md  patterns-and-conventions.md  testing.md  tooling.md
droid-wiki/overview/: architecture.md  getting-started.md  glossary.md  index.md
droid-wiki/primitives/: registry-config.md
droid-wiki/reference/: agents-catalogue.md  configuration.md  dependencies.md
droid-wiki/systems/: agent-catalogue.md  bootstrap-push.md  index.md  json-output.md  mcp-entry-point-install.md
infa-not-for-users/: .dockerignore  .env.example  Dockerfile  HANDOFF.md  README.md  REMOTE_MCP_PLAN.md  pyproject.toml  railway.json
infa-not-for-users/skills_mcp/: __init__.py  github_api.py  github_app.py  linking.py  middleware.py  remote_server.py  setup_routes.py  webhooks.py
infa-not-for-users/tests/: conftest.py  test_first_paragraph.py  test_github_api.py  test_remote_server.py  test_setup_routes.py  test_webhooks.py
mac-app/: .gitignore  HANDOFF.md  Package.resolved  Package.swift  README.md  appcast.xml
mac-app/Resources/: AppIcon.icns  Info.plist
mac-app/Sources/SkillsRegistry/: AddView.swift  AgentPickerSheet.swift  AppState.swift  BrowseView.swift  Components.swift  Demo.swift  HomeView.swift  ImportView.swift  LoginView.swift  MarkdownTheme.swift  SettingsView.swift  SetupView.swift  SkillDetailView.swift  SkillsRegistryApp.swift  Theme.swift  UpdateBanner.swift  UpdaterManager.swift
mac-app/Sources/SkillsRegistryCore/: Agents.swift  AppConfig.swift  CLIInstaller.swift  DeviceFlow.swift  Frontmatter.swift  FuzzyScore.swift  GitHubAPI.swift  GitHubReads.swift  GitHubWrites.swift  Keychain.swift  LocalInstall.swift  LocalRemove.swift  MetaSkill.swift  Models.swift  RegistryConfig.swift  Scan.swift  SkillMdTemplate.swift  Slug.swift  SourceResolver.swift  Subprocess.swift  Updates.swift
mac-app/Tests/SkillsRegistryCoreTests/: CoreContractTests.swift  LocalInstallTests.swift  LocalRemoveTests.swift  MetaSkillTests.swift  SkillMdTemplateTests.swift  SourceResolverTests.swift  UpdatesTests.swift
mac-app/scripts/: bundle.sh  make-icon.sh
npm/: README.md  package.json
npm/lib/: binary.js
src/skills_mcp/: __main__.py  add.py  cache.py  config.py  frontmatter.py  gather.py  github_api.py  github_app.py  init.py  linking.py  remote_server.py  setup_routes.py  webhooks.py
tests/: test_add.py  test_cache.py  test_config.py  test_frontmatter.py  test_gather.py  test_github_app.py  test_init.py  test_linking.py  test_remote_server.py
website/: .firebaserc  firebase.json  package.json
website/.firebase/: hosting.b3V0.cache
website/app/: globals.css  layout.tsx  page.tsx
