[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "skills-registry"
dynamic = ["version"]
description = "GitHub-backed skill registry: `skills-registry init` bootstraps a personal registry repo, `skill-registry-mcp` serves it over MCP, and the `skill-registry` Go CLI manages it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "anand-92" }]
keywords = ["mcp", "model-context-protocol", "fastmcp", "claude", "skills", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.1.1,<4",
]

[project.scripts]
skills-registry = "skills_mcp.__main__:main"
skill-registry-mcp = "skills_mcp.registry_server:main"

[project.urls]
Homepage = "https://github.com/anand-92/skills-registry"
Repository = "https://github.com/anand-92/skills-registry"
Issues = "https://github.com/anand-92/skills-registry/issues"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff>=0.6",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skills_mcp"]

[tool.hatch.version]
source = "vcs"
