[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "skills-registry"
dynamic = ["version"]
description = "Remote FastMCP server for the GitHub-backed skills registry. Authenticates MCP clients via GitHub OAuth and serves skills from each user's linked repo using a GitHub App installation token."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "anand-92" }]
keywords = ["mcp", "model-context-protocol", "fastmcp", "claude", "skills", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.1.1,<4",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42",
    "py-key-value-aio>=0.2",
    "starlette>=0.37",
]

[project.scripts]
skill-registry-mcp = "skills_mcp.remote_server:main"

[project.urls]
Homepage = "https://github.com/anand-92/skills-registry"
Repository = "https://github.com/anand-92/skills-registry"
Issues = "https://github.com/anand-92/skills-registry/issues"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.6",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skills_mcp"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
