[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The hosted MCP server has no semver release: it's never published to
# PyPI, never tagged, and Railway redeploys it on every push to main. So
# we pin a static placeholder version and skip hatch-vcs entirely — that
# also removes the need for SETUPTOOLS_SCM_PRETEND_VERSION env shims in
# CI, local dev, and the Dockerfile.
[project]
name = "skills-registry"
version = "0.0.0+server"
description = "Remote FastMCP server for the GitHub-backed skills registry. Authenticates MCP clients via GitHub OAuth and serves skills from each user's linked repo using a GitHub App installation token."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "anand-92" }]
keywords = ["mcp", "model-context-protocol", "fastmcp", "claude", "skills", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.1.1,<4",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42",
    "py-key-value-aio>=0.2",
    "starlette>=0.37",
    "posthog>=3.0.0",
]

[project.scripts]
skills-registry-mcp = "skills_mcp.remote_server:main"

[project.urls]
Homepage = "https://github.com/anand-92/skills-registry"
Repository = "https://github.com/anand-92/skills-registry"
Issues = "https://github.com/anand-92/skills-registry/issues"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.6",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["skills_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
